# voice-agent-hub

./: .env.example  .gitignore  AGENTS.md  Dockerfile  Makefile  README.md  TESTING_PROPOSAL.md  TODO.md  fly.toml  pyproject.toml
.github/workflows/: ci.yml
backend/: auth.py  config.py  crypto.py  database.py  dependencies.py  main.py  models.py
backend/static/: index.html
backend/static/assets/: index-BAwQ5ivs.js  index-BESTLZIJ.js  index-BRIvcK8d.css  index-Bi0Ba9_Y.js  index-BiN5eoYF.js  index-DSjYbTRm.js  index-Dp82qRM0.js  index-SBE5xKk9.css
frontend/: index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/pages/: Call.tsx  Dashboard.tsx  Verify.tsx
frontend/tests/e2e/: call.spec.ts  home.spec.ts  mic-selector.spec.ts  verify.spec.ts
tests/: conftest.py  smoke_test.py  test_hub.py
tests/integration/: conftest.py  test_admin.py  test_agent.py  test_device_auth.py
