[project]
name = "voice-agent-hub"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "sqlalchemy>=2.0",
  "pyjwt>=2.9",
  "cryptography>=43",
  "livekit-api>=0.7",
  "httpx>=0.27",
  "python-multipart>=0.0.12",
  "aiosqlite>=0.20",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend"]
